# music_search_mcp

./: README.md  pyproject.toml
src/music_search/: __init__.py  api_music_gequbao.py
src/music_search_mcp/: __init__.py  alist_storage.py  api_music_gequbao.py  logging_config.py  mcp_server.py  request_cache.py
