[project]
name = "music-search"
version = "0.1.0"
description = "search music online"
readme = "README.md"
authors = [
    { name = "ailearncoder", email = "ailearncoder8@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastmcp>=2.12.4",
    "requests>=2.32.5",
]

[project.scripts]
music-search = "music_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
