[project]
name = "music-search-mcp"
version = "0.1.5"
description = "search music online"
readme = "README.md"
authors = [
    { name = "ailearncoder", email = "ailearncoder8@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastmcp>=2.12.4",
    "openlist-api>=0.1.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
]

[project.scripts]
music-search-mcp = "music_search_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"src/music_search_mcp/assets/ZeroSSL_ECC_Domain_Secure_Site_CA.pem" = "music_search_mcp/assets/ZeroSSL_ECC_Domain_Secure_Site_CA.pem"

[[tool.uv.index]]
url = "https://pypi.mac.axyz.cc:30923/simple"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "rich>=14.2.0",
]
